examples/test/testpolicy16436.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16436
  namespace: namespace187
spec:
  podSelector:
    matchLabels:
      key42: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value47
          key46: value23
          key18: value8
      podSelector:
        matchLabels:
          key5: value45
